# esm

./: .pre-commit-config.yaml  README.md  pyproject.toml
cookbook/tutorials/: binder_design.ipynb  binder_design.py  embed.ipynb  esmc_sae_feature_interpretation.ipynb  gfp_design.ipynb
esm/layers/: attention.py  codebook.py  rotary.py
esm/models/: esm3.py  esmc.py  vqvae.py
esm/models/esmfold2/: paired_msa.py  prepare_input.py
esm/sdk/: api.py  forge.py
esm/sdk/experimental/: constrained_generation.py  guided_generation.py
esm/tokenization/: __init__.py  residue_tokenizer.py  sequence_tokenizer.py
esm/utils/: encoding.py  forge_context_manager.py  generation.py  misc.py  parsing.py  residue_constants.py  system.py
esm/utils/function/: interpro.py  lsh.py
esm/utils/msa/: msa.py  msa_test.py
esm/utils/structure/: affine3d.py  aligner.py  input_builder.py  metrics.py  mmcif_parsing.py  molecular_complex.py  normalize_coordinates.py  predicted_aligned_error.py  protein_chain.py  protein_complex.py  protein_structure.py
esm/widgets/components/: results_visualizer.py  sasa_prompt_selector.py  secondary_structure_prompt_selector.py  sequence_prompt_selector.py  structure_prompt_selector.py
esm/widgets/utils/: prompting.py  protein_import.py
esm/widgets/utils/drawing/: colors.py  draw_function_annotations.py
esm/widgets/views/: esm3_prompt_preview.py
scripts/: run_esmfold2.py
